--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -205,9 +205,9 @@ div.main_button {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
-  width: 95%;
+  width: 95% 
 }
-div.main_button a {
+div.main_button a, div.main_button input{
   display: block;
   box-sizing: border-box;
   font-size: 18px;
